till past order done

--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -123,5 +124,10 @@
       }
     }
   },
-  "defaultProject": "eventWeb"
+  "defaultProject": "eventWeb",
+  "cli": {
+    "warnings": {
+      "typescriptMismatch": false
+    }
+  }
 }
